[gd_scene load_steps=7 format=3 uid="uid://cq8ywm7dxvvqp"]

[ext_resource type="PackedScene" uid="uid://drfp4vl2w1wvr" path="res://level1/scene_template.tscn" id="1_furnace_template"]
[ext_resource type="Script" path="res://level1/furnace.gd" id="2_furnace_script"]
[ext_resource type="Script" path="res://level1/shovel.gd" id="3_shovel_script"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_obstacle"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_container_wall"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_left_wall"]
a = Vector2(-40, -6)
b = Vector2(-18, 7)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_bottom_wall"]
a = Vector2(-18, 7)
b = Vector2(18, 7)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_right_wall"]
a = Vector2(18, 7)
b = Vector2(40, -6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stamina_bg"]
bg_color = Color(0.2, 0.2, 0.2, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.3, 0.5)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stamina_fill"]
bg_color = Color(0.2, 0.9, 0.3, 0.3)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_focus_bg"]
bg_color = Color(0.2, 0.2, 0.2, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.3, 0.5)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_focus_fill"]
bg_color = Color(0.3, 0.6, 1, 0.3)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_combo_panel"]
bg_color = Color(0.1, 0.1, 0.1, 0.7)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 0.5)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_timer_bg"]
bg_color = Color(0.2, 0.2, 0.2, 0.5)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_timer_fill"]
bg_color = Color(0.9, 0.5, 0.2, 0.6)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Furnace" instance=ExtResource("1_furnace_template")]
script = ExtResource("2_furnace_script")

[node name="CoalContainer" type="Node2D" parent="AspectContainer/MainContainer/mainarea/PlayArea" index="0"]

[node name="LeftWall" type="StaticBody2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/CoalContainer"]
collision_layer = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/CoalContainer/LeftWall"]
shape = SubResource("RectangleShape2D_container_wall")

[node name="VisualLine" type="Line2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/CoalContainer/LeftWall"]
default_color = Color(0, 0, 0, 1)
width = 3.0

[node name="BottomWall" type="StaticBody2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/CoalContainer"]
collision_layer = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/CoalContainer/BottomWall"]
shape = SubResource("RectangleShape2D_container_wall")

[node name="VisualLine" type="Line2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/CoalContainer/BottomWall"]
default_color = Color(0, 0, 0, 1)
width = 3.0

[node name="RightWall" type="StaticBody2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/CoalContainer"]
collision_layer = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/CoalContainer/RightWall"]
shape = SubResource("RectangleShape2D_container_wall")

[node name="VisualLine" type="Line2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/CoalContainer/RightWall"]
default_color = Color(0, 0, 0, 1)
width = 3.0

[node name="FurnaceWall" type="Node2D" parent="AspectContainer/MainContainer/mainarea/PlayArea" index="1"]

[node name="TopLine" type="Line2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/FurnaceWall"]

[node name="BottomLine" type="Line2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/FurnaceWall"]

[node name="TopObstacle" type="StaticBody2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/FurnaceWall"]
collision_layer = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/FurnaceWall/TopObstacle"]
shape = SubResource("RectangleShape2D_obstacle")

[node name="BottomObstacle" type="StaticBody2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/FurnaceWall"]
collision_layer = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/FurnaceWall/BottomObstacle"]
shape = SubResource("RectangleShape2D_obstacle")

[node name="DeliveryZone" type="Node2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/FurnaceWall"]

[node name="Shovel" type="Node2D" parent="AspectContainer/MainContainer/mainarea/PlayArea" index="2"]

[node name="RigidBody2D" type="RigidBody2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/Shovel"]
script = ExtResource("3_shovel_script")

[node name="LeftWall" type="CollisionShape2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/Shovel/RigidBody2D"]
shape = SubResource("SegmentShape2D_left_wall")

[node name="BottomWall" type="CollisionShape2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/Shovel/RigidBody2D"]
shape = SubResource("SegmentShape2D_bottom_wall")

[node name="RightWall" type="CollisionShape2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/Shovel/RigidBody2D"]
shape = SubResource("SegmentShape2D_right_wall")

[node name="OutlineLine2D" type="Line2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/Shovel/RigidBody2D"]

[node name="Line2D" type="Line2D" parent="AspectContainer/MainContainer/mainarea/PlayArea/Shovel/RigidBody2D"]

[node name="BorderZones" type="Node2D" parent="AspectContainer/MainContainer/mainarea/PlayArea" index="3"]

[node name="StaminaBar" type="ProgressBar" parent="AspectContainer/MainContainer/mainarea/Menu" index="0"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)
max_value = 100.0
value = 50.0
show_percentage = false
theme_override_styles/background = SubResource("StyleBoxFlat_stamina_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_stamina_fill")

[node name="FocusBar" type="ProgressBar" parent="AspectContainer/MainContainer/mainarea/Menu" index="1"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)
max_value = 100.0
value = 50.0
show_percentage = false
theme_override_styles/background = SubResource("StyleBoxFlat_focus_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_focus_fill")

[node name="ComboContainer" type="VBoxContainer" parent="AspectContainer/MainContainer/mainarea/Menu" index="2"]
layout_mode = 2
theme_override_constants/separation = 6
visible = false

[node name="NodropComboPanel" type="PanelContainer" parent="AspectContainer/MainContainer/mainarea/Menu/ComboContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_combo_panel")

[node name="HBoxContainer" type="HBoxContainer" parent="AspectContainer/MainContainer/mainarea/Menu/ComboContainer/NodropComboPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ComboLabel" type="Label" parent="AspectContainer/MainContainer/mainarea/Menu/ComboContainer/NodropComboPanel/HBoxContainer"]
layout_mode = 2
text = "Streak: 0/20"

[node name="ForgivenessLabel" type="Label" parent="AspectContainer/MainContainer/mainarea/Menu/ComboContainer/NodropComboPanel/HBoxContainer"]
layout_mode = 2
text = "[0]"
visible = false

[node name="HeavyComboPanel" type="PanelContainer" parent="AspectContainer/MainContainer/mainarea/Menu/ComboContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_combo_panel")

[node name="HBoxContainer" type="HBoxContainer" parent="AspectContainer/MainContainer/mainarea/Menu/ComboContainer/HeavyComboPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HeavyStacksLabel" type="Label" parent="AspectContainer/MainContainer/mainarea/Menu/ComboContainer/HeavyComboPanel/HBoxContainer"]
layout_mode = 2
text = "Heavy: 0"

[node name="HeavyTimerBar" type="ProgressBar" parent="AspectContainer/MainContainer/mainarea/Menu/ComboContainer/HeavyComboPanel/HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(60, 16)
max_value = 5.0
show_percentage = false
theme_override_styles/background = SubResource("StyleBoxFlat_timer_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_timer_fill")

[node name="BenefitsTooltip" type="PanelContainer" parent="AspectContainer/MainContainer/mainarea/Menu" index="3"]
layout_mode = 2
visible = false
theme_override_styles/panel = SubResource("StyleBoxFlat_combo_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="AspectContainer/MainContainer/mainarea/Menu/BenefitsTooltip"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="BenefitsHeaderLabel" type="Label" parent="AspectContainer/MainContainer/mainarea/Menu/BenefitsTooltip/VBoxContainer"]
layout_mode = 2
text = "Active Bonuses"

[node name="BenefitsList" type="VBoxContainer" parent="AspectContainer/MainContainer/mainarea/Menu/BenefitsTooltip/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ToMindButton" type="Button" parent="AspectContainer/MainContainer/mainarea/Menu" index="4"]
layout_mode = 2
theme_type_variation = &"ForwardNavButton"
text = "To Mind"

[node name="Debug25CoalButton" type="Button" parent="AspectContainer/MainContainer/mainarea/Menu" index="5"]
visible = false
layout_mode = 2
text = "[DEBUG] +25 Coal"

[node name="DebugDrainStaminaButton" type="Button" parent="AspectContainer/MainContainer/mainarea/Menu" index="6"]
visible = false
layout_mode = 2
text = "[DEBUG] Drain Stamina"
