[gd_scene load_steps=3 format=3 uid="uid://cni3f6t3vpjku"]

[ext_resource type="Script" path="res://level1/furnace.gd" id="1"]
[ext_resource type="Texture2D" path="res://level1/furnace.jpg" id="2"]

[node name="Furnace" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2

[node name="CoalLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Coal Shoveled: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Coins: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MineButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Shovel Coal"

[node name="ShopButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Take Break"

[connection signal="pressed" from="VBoxContainer/MineButton" to="." method="_on_mine_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ShopButton" to="." method="_on_shop_button_pressed"]
